--- a/odoodo_project/view/task_view.xml
+++ b/odoodo_project/view/task_view.xml
@@ -73,7 +73,14 @@
 									</group>
 								</page>
 								<page name="issue_page" string="Issue">
-									<field name="issue_id" />
+									<field name="issue_id">
+										<tree>
+											<field name="name" />
+											<field name="user_id" />
+											<field name="priority" />
+											<field name="state_id" />
+										</tree>
+									</field>
 								</page>
 							</notebook>
 						</sheet>
