--- a/odoodo_project/view/task_view.xml
+++ b/odoodo_project/view/task_view.xml
@@ -78,7 +78,7 @@
 											<field name="name" />
 											<field name="user_id" />
 											<field name="priority" />
-											<field name="state_id" />
+											<field name="stage_id" />
 										</tree>
 									</field>
 								</page>
