--- a/odoodo_project/view/task_view.xml
+++ b/odoodo_project/view/task_view.xml
@@ -17,13 +17,15 @@
 									class="oe_stat_button" icon="fa-archive">
 									<field name="active" widget="boolean_button" options='{"terminology": "archive"}' />
 								</button>
-								<button name="toggle_active" type="object"
-									confirm="(Un)archiving a project automatically (un)archives its tasks and issues. Do you want to proceed?"
-									class="oe_stat_button" icon="fa-archive">
-									<field name="active" widget="boolean_button" options='{"terminology": "archive"}' />
-								</button>
+						
+									<button class="oe_stat_button" type="action" 
+										name="%(project_issue.act_project_project_2_project_issue_all)d" icon="fa-bug">
+										<field string="Issues" name="issue_count" widget="statinfo"
+											options="{'label_field': 'label_issues'}" />
+									</button>
+								</div>
 
-							</div>
+							
 
 							<field name="kanban_state" widget="kanban_state_selection" />
 							<div class="oe_title">
@@ -91,7 +93,8 @@
 			<field name="context">{
 				'search_default_user_id':[uid],
 				'search_default_project_id': [active_id],
-				'default_project_id': active_id,
+				'default_project_id':
+				active_id,
 				'default_user_id':uid,
 				}
 			</field>
@@ -101,7 +104,8 @@
 					Here, you can create new tasks
 				</p>
 				<p>
-					You can now manage your tasks in order to get things done efficiently.
+					You can now manage your tasks in order to get things done
+					efficiently.
 					Track progress, discuss, attach documents, etc.
 				</p>
 			</field>
